--- a/initiation/init.html
+++ b/initiation/init.html
@@ -12,8 +12,8 @@
         <li>Авдиенко Данила (2161)</li><br>
         <li>Тематика сайта - космос и космические объекты. Название сайта "COSMOS" (предварительное)</li><br>
         <li>Сайт носит в себе ознакомительный, развлекательный характер. 
-            Цель сайта - популяризировать любительскую астрономию и рассказать об интересных космических объектах. Эта цель будет достигаться путем предоставлением пользователю соответствующей 
-            информации и обеспечением интерактивного взаимодействия с некоторыми элементами сайта. </li><br>
+            Цель сайта - популяризировать любительскую астрономию и рассказать об интересных космических объектах. Эта цель будет достигаться путем предоставления пользователю соответствующей 
+            информации и обеспечения интерактивного взаимодействия с некоторыми элементами сайта. </li><br>
         <li>Целевой аудиторией являются люди, заинтересованные в: <ul><li>Любительской астрономии</li><li>Расширении своего кругозора</li><li>Эстетическом удовлетворении</li></ul></li><br>
         <li>Сайт состоит из 7-ми страниц:<br><br>
             <ol>
