--- a/home.html
+++ b/home.html
@@ -31,7 +31,7 @@
         <nav class="navbar">
             <a id="lk" href="home.html">Home</a>
             <a id="lk" href="test/test.html">Test</a>
-            <a id="lk" href="#">Gallery</a>
+            <a id="lk" href="gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -42,13 +42,14 @@
     <!-- Блок карточек-ссылок -->
     <main>
         <div class="container">
-            <div class="textBlock"><h1>Космос</h1><p class="description"><span id="fw">Космос</span> – бескрайние просторы загадочной вселенной, где сосуществуют бесчисленные звезды, планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного открытия. <br><br><span id="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические объекты. Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.</p></div>
-            <a href=""><div class="card1"><p class="tc">Туманности</p></div></a>
-            <a href=""><div class="card2"><p class="tc">Кометы</p></div></a>
-            <a href="blackholes.html"><div class="card3"><p class="tc">Черные дыры</p></div></a>
-            <a href=""><div class="card4"><p class="tc">Экзопланеты</p></div></a>
+            <div class="textBlock"><h1>Космос</h1><br><p class="description"><span id="fw">Космос</span> – бескрайние просторы загадочной вселенной, где сосуществуют бесчисленные звезды, планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного открытия. <br><br><span id="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические объекты. Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.</p></div>
+            <a href="fogs/fogs.html"><div class="card1"><p class="tc">Туманности</p></div></a>
+            <a href="comets/comets.html"><div class="card2"><p class="tc">Кометы</p></div></a>
+            <a href="holes/holes.html"><div class="card3"><p class="tc">Черные дыры</p></div></a>
+            <a href="exoplanets/exoplanets.html"><div class="card4"><p class="tc">Экзопланеты</p></div></a>
         </div>
     </main>
       <script src="home.js"></script>
+      <script src="theme.js"></script>
 </body>
 </html>
