--- a/test/test.html
+++ b/test/test.html
@@ -29,7 +29,7 @@
         <nav class="navbar">
             <a id="lk" href="../home.html">Home</a>
             <a id="lk" href="#">Test</a>
-            <a id="lk" href="#">Gallery</a>
+            <a id="lk" href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -78,6 +78,7 @@
         </div>
         </div>
     </main>
+    <script src="../theme.js"></script>
     <script src="test.js"></script>
 </body>
 </html>
