--- a/fogs/fogs.html
+++ b/fogs/fogs.html
@@ -29,9 +29,9 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a id="lk" href="../home.html">Home</a>
-            <a id="lk" href="../test/test.html">Test</a>
-            <a id="lk" href="../gallery/gallery.html">Gallery</a>
+            <a href="../home.html">Home</a>
+            <a href="../test/test.html">Test</a>
+            <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -48,33 +48,38 @@
     <div class="right">
         <p>&#707;</p>
     </div>
+    <div class="slide slide3 active">
+        <div class="description">
+            <h1>Butterfly</h1>
+            <p id="tt3"><span class="fw">Туманность Бабочка</span> это планетарная туманность в 
+                созвездии Скорпиона<span class="closed">, на расстоянии около 3.8 тысяч световых лет от Земли</span>. Она имеет биполярную структуру, напоминающую крылья бабочки. </p>
+       <p id="bt3"> <span class="fw">Центральная</span> звезда туманности очень горячая, с температурой свыше 200 тысяч градусов по Цельсию. <span class="closed"> Туманность излучает свет в различных спектрах, и её изображения, сделанные телескопом Хаббл, впечатляют своей красотой.</span></p>
+    </div>
+    </div>
         
-
-        <div class="slide slide1 active">
-            <div class="description">
-            <h1>Kep<span id="bigscreen">ler</span> <span id="smallscreen">ler</span>  <div id="rotated">406 b</div></h1>
-            <p><span id="fw">Kepler-452 b</span> — первая из открытых потенциально скалистых суперземель, которая вращается вокруг довольно похожей на Солнце звезды спектрального класса G2 в обитаемой зоне, пригодной для жизни. Согласно индексу подобия Земли, Kepler-452 b — шестая в списке планет, похожих на Землю.</p>
-        </div>
-        </div>
 
         <div class="slide slide2">
             <div class="description">
-            <h1>Kepler <div id="rotated">452 b</div></h1>
-            <p><span id="fw">Kepler-452 b</span> — кандидат в экзопланеты в созвездии Лебедя. 
-                Планета находится на расстоянии 1402 световых лет от Солнечной системы.  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
-
+            <h1>Carina</h1>
+            <p id="tt2"><span class="fw">Туманность Киля</span> это большая область звездообразования в 
+                созвездии Киля, расположенная на расстоянии около 
+                7,5 тысяч световых лет от Земли.</p>
+            <p id="bt2"><span class="fw">Туманность</span> Киля излучает свет в различных спектрах и является объектом интенсивных исследований астрономов<span class="closed"> благодаря своей динамичной и сложной структуре</span>.</p>
         </div>
         </div>
 
-        <div class="slide slide3">
+        <div class="slide slide1">
+            <h1>Pillars of Creation</h1>
             <div class="description">
-                <h1>Gliese <div id="rotated">667Cc</div></h1>
-                <p><span id="fw">Gliese 667Cc</span> — первая из открытых потенциально скалистых суперземель, которая вращается вокруг довольно похожей на Солнце 
-                    звезды спектрального класса G2 в обитаемой зоне, пригодной для жизни. Согласно индексу подобия Земли,  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
+            <p id="tt1"><span class="fw">Столпы</span> творения -  это огромные газовые сгустки,
+                 появившиеся из столбов молекулярного водорода и 
+                пыли под воздействием звёздного ветра. <span class="closed"> Эти колонны газа - один из 
+                самых узнаваемых образов космоса.</span>
+            </p>
+            <p id="bt1"> <span class="fw">Туманность</span> находится на расстоянии примерно 7 тысяч световых лет от Земли
+                и является местом 
+                интенсивного звездообразования<span class="closed">, где газ и пыль сжимаются под воздействием
+                 гравитации, образуя гигантские столбы, внутри которых зарождаются новые звезды.</span> </p>
         </div>
         </div>
     </div>
