--- a/holes/holes.html
+++ b/holes/holes.html
@@ -29,9 +29,9 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a id="lk" href="../home.html">Home</a>
-            <a id="lk" href="../test/test.html">Test</a>
-            <a id="lk" href="../gallery/gallery.html">Gallery</a>
+            <a href="../home.html">Home</a>
+            <a href="../test/test.html">Test</a>
+            <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -49,32 +49,31 @@
         <p>&#707;</p>
     </div>
         
-
-        <div class="slide slide1 active">
+        <div class="slide slide2 active">
             <div class="description">
-            <h1>Гарган<span id="bigscreen">тюа</span> <span id="smallscreen">тюа</span></h1>
-            <p><span id="fw">Гаргантюа</span> — сверхмассивная вращающаяся чёрная дыра с аккреционным диском. Находится в 10 миллиардах световых лет от Земли.</p>
+            <h1>M87*</h1>
+            <p id="tt2"><span class="fw">M87*</span> — это сверхмассивная черная дыра в центре галактики Мессье 87.
+                Она находится на расстоянии 53 миллиона световых лет от Земли<span class="closed"> и обладает массой 6,5 миллиардов солнечных масс</span>.</p>
+                <p id="bt2"><span class="fw">В 2019</span> году M87* стала первой черной дырой,
+            изображенной с помощью проекта Event Horizon Telescope, что предоставило первое прямое доказательство существования черных дыр.</p>
         </div>
         </div>
 
-        <div class="slide slide2">
+        <div class="slide slide1">
             <div class="description">
-            <h1>Kepler <div id="rotated">452 b</div></h1>
-            <p><span id="fw">Kepler-452 b</span> — кандидат в экзопланеты в созвездии Лебедя. 
-                Планета находится на расстоянии 1402 световых лет от Солнечной системы.  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
+            <h1>Cygnus X-1</h1>
+            <p id="tt"><span class="fw">Cygnus X-1</span>  — это черная дыра, расположенная в созвездии Лебедя на расстоянии около 6 тысяч световых лет от Земли.</p>
+                <p id="bt"><span class="fw">Масса Cygnus X-1</span> составляет примерно 21 солнечную массу. Это одна из первых обнаруженных черных дыр и один из наиболее изученных объектов такого типа.</p>
+        </div>
+        </div>
 
-        </div>
-        </div>
 
         <div class="slide slide3">
             <div class="description">
-                <h1>Gliese <div id="rotated">667Cc</div></h1>
-                <p><span id="fw">Gliese 667Cc</span> — первая из открытых потенциально скалистых суперземель, которая вращается вокруг довольно похожей на Солнце 
-                    звезды спектрального класса G2 в обитаемой зоне, пригодной для жизни. Согласно индексу подобия Земли,  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
+                <h1>Sagittarius A*</h1>
+                <p id="tt3"><span class="fw">Стрелец A*</span> это сверхмассивная черная дыра, 
+                    расположенная в центре нашей галактики. Она находится на расстоянии около 26 тысяч световых лет от Земли<span class="closed"> в созвездии Стрельца</span>.</p>
+                    <p id="bt3"><span class="fw">Ее масса</span> составляет около 4 миллионов масс Солнца. Стрелец A* играет ключевую роль в динамике галактики <span class="closed">, влияя на движение звезд и газа в её центральной области</span>.</p>
         </div>
         </div>
     </div>
