--- a/home.html
+++ b/home.html
@@ -12,6 +12,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Fira+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Jersey+15&display=swap"
         rel="stylesheet">
+    <link rel="shortcut icon" href="temp/favicon.png">
     <title>COSMOS</title>
 </head>
 <body>
@@ -29,9 +30,9 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a id="lk" href="home.html">Home</a>
-            <a id="lk" href="test/test.html">Test</a>
-            <a id="lk" href="gallery/gallery.html">Gallery</a>
+            <a href="home.html">Home</a>
+            <a href="test/test.html">Test</a>
+            <a href="gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -42,9 +43,14 @@
     <!-- Блок карточек-ссылок -->
     <main>
         <div class="container">
-            <div class="textBlock"><h1>Космос</h1><br><p class="description"><span id="fw">Космос</span> – бескрайние просторы загадочной вселенной, где сосуществуют бесчисленные звезды, планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного открытия. <br><br><span id="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические объекты. Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.</p></div>
+            <div class="textBlock"><h1>Космос</h1><br><p class="description"><span class="fw">Космос</span> 
+                - это бескрайние просторы загадочной вселенной<span id="closed">, где сосуществуют бесчисленные звезды,
+                 планеты и галактики. Здесь скрыты тайны, удивительные явления и возможности для бесконечного открытия.</span> 
+
+                 <br><br><span class="fw">На</span> этом сайте вы можете подробнее рассмотреть некоторые космические объекты. 
+                 Просто кликните по соответствующей карточке и отправьтесь в увлекательное путешествие по космосу.</p></div>
             <a href="fogs/fogs.html"><div class="card1"><p class="tc">Туманности</p></div></a>
-            <a href="comets/comets.html"><div class="card2"><p class="tc">Кометы</p></div></a>
+            <a href="galaxies/galaxy.html"><div class="card2"><p class="tc">Галактики</p></div></a>
             <a href="holes/holes.html"><div class="card3"><p class="tc">Черные дыры</p></div></a>
             <a href="exoplanets/exoplanets.html"><div class="card4"><p class="tc">Экзопланеты</p></div></a>
         </div>
