--- a/exoplanets/exoplanets.html
+++ b/exoplanets/exoplanets.html
@@ -29,9 +29,9 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a id="lk" href="../home.html">Home</a>
-            <a id="lk" href="../test/test.html">Test</a>
-            <a id="lk" href="../gallery/gallery.html">Gallery</a>
+            <a href="../home.html">Home</a>
+            <a href="../test/test.html">Test</a>
+            <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -52,29 +52,33 @@
 
         <div class="slide slide1 active">
             <div class="description">
-            <h1>Kep<span id="bigscreen">ler</span> <span id="smallscreen">ler</span>  <div id="rotated">406 b</div></h1>
-            <p><span id="fw">Kepler-452 b</span> — первая из открытых потенциально скалистых суперземель, которая вращается вокруг довольно похожей на Солнце звезды спектрального класса G2 в обитаемой зоне, пригодной для жизни. Согласно индексу подобия Земли, Kepler-452 b — шестая в списке планет, похожих на Землю.</p>
+            <h1>Kep<span class="bigscreen">ler</span> <span class="smallscreen">ler</span>  <span class="rotated">452b</span></h1>
+            <p id="tt1"><span class="fw">Kepler-452b</span> — первая из открытых <span class="closed">потенциально скалистых </span> 
+                суперземель, которая вращается вокруг похожей на Солнце звезды<span class="closed"> спектрального класса G2 
+                в обитаемой зоне</span>. Согласно индексу подобия Земли, Kepler-452b — шестая в списке планет, похожих на Землю.</p>
+                <p id="bt1" class="closed"> <span class="fw">Период</span> обращения планеты Kepler-452 b равен 384,843 земных суток. Kepler-452b больше на 63 % и старше на 1,5 млрд лет, 
+                    чем Земля, но находится на орбите в зоне обитаемости своей звезды.</p>
         </div>
         </div>
 
         <div class="slide slide2">
             <div class="description">
-            <h1>Kepler <div id="rotated">452 b</div></h1>
-            <p><span id="fw">Kepler-452 b</span> — кандидат в экзопланеты в созвездии Лебедя. 
-                Планета находится на расстоянии 1402 световых лет от Солнечной системы.  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
-
+            <h1>Cent<span class="bigscreen">auria</span> <span class="smallscreen">-auria</span> B</h1>
+            <p id="tt2"><span class="fw">Проксима Центавра b</span> — это экзопланета, вращающаяся вокруг звезды Проксима Центавра<span class="closed">, ближайшей к Солнцу звезды,
+                находящейся на расстоянии около 4,24 световых лет</span>.</p>
+            <p id="bt2"><span class="fw">Планета</span> была обнаружена в 2016 году и находится в обитаемой зоне, где условия могут позволять существование жидкой воды.</p>
         </div>
         </div>
 
         <div class="slide slide3">
             <div class="description">
-                <h1>Gliese <div id="rotated">667Cc</div></h1>
-                <p><span id="fw">Gliese 667Cc</span> — первая из открытых потенциально скалистых суперземель, которая вращается вокруг довольно похожей на Солнце 
-                    звезды спектрального класса G2 в обитаемой зоне, пригодной для жизни. Согласно индексу подобия Земли,  <br> <br>
-            <span id="fw">Эта экзопланета</span> — первая из открытых потенциальных суперземель, которая вращается вокруг довольно похожей на Солнце 
-                звезды в зоне, пригодной для жизни.</p>
+                <h1>Gliese <span class="rotated">667Cc</span></h1>
+                <p id="tt3"><span class="fw">Gliese 667Cc</span> —  это экзопланета, находящаяся на
+                    расстоянии примерно 23,62 тысяч световых лет от Земли. Эта планета была открыта в
+                     2011 году и считается одной из наиболее похожих на Землю планет.</p>
+            <p id="bt3"><span class="fw">Поверхность</span> планеты вероятно покрыта водными массами, что делает ее потенциально пригодной для жизни.
+
+            <span class="closed">Изучение Gliese 667Cc позволяет ученым лучше понять возможность существования жизни на других планетах в нашей галактике.</span></p>
         </div>
         </div>
     </div>
