--- a/test/test.html
+++ b/test/test.html
@@ -27,9 +27,9 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a id="lk" href="../home.html">Home</a>
-            <a id="lk" href="#">Test</a>
-            <a id="lk" href="../gallery/gallery.html">Gallery</a>
+            <a href="../home.html">Home</a>
+            <a href="#">Test</a>
+            <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
                 <a target="_blank" href="https://vk.com/nefelibata1"><i class='bx bxl-vk'></i></a>
                 <a target="_blank" href="https://t.me/nefelibata_7"><i class='bx bxl-telegram'></i></a>
@@ -40,32 +40,33 @@
     <main>
 
         <div class="container">
-        <div class="textBlock"><h1>А можно ли вам в космонавты?</h1><p class="description"> <br><span id="fw">Космонавт</span> представляет
-             собой одну из самых престижных и загадочных профессий в мире. Ежегодно сотни амбициозных людей отправляют свои заявки в
-             Центр подготовки космонавтов России, мечтая о шансе покорить космос. <br><br>
-              <span id="fw">Сейчас</span> вам предоставляется возможность пройти первичное тестирование для вакансии космонавта. 
-              Введите ваши данные и узнайте, сможете ли вы преодолеть первый рубеж на пути к покорению космоса.</p></div>
+        <div class="textBlock"><h1>А можно ли вам в космонавты?</h1>
+            <p class="description"> <br><span class="fw">Космонавт</span> представляет
+             собой одну из самых престижных и загадочных профессий в мире. <span class="closed">Ежегодно сотни амбициозных людей отправляют свои заявки в
+             Центр подготовки космонавтов России, мечтая о шансе покорить космос.</span> <br><br>
+              <span class="fw">Сейчас</span> вам предоставляется возможность пройти первичное тестирование для вакансии космонавта. <span class="closed">
+              Введите ваши данные и узнайте, сможете ли вы преодолеть первый рубеж на пути к покорению космоса.</span></p></div>
         <div class="forma">
         <div class="form-container">
             <form id="data-form">
                 <div class="data">
-                    <label id="hd" for="height">Рост (см)</label>
+                    <label class="hd" for="height">Рост (см)</label>
                     <input type="number" id="height" name="height" required>
                 </div>
                 <div class="data">
-                    <label id="hd" for="weight">Вес (кг)</label>
+                    <label class="hd" for="weight">Вес (кг)</label>
                     <input type="number" id="weight" name="weight" required>
                 </div>
                 <div class="data">
-                    <label id="hd" for="leg">Длина ступни (см)</label>
+                    <label class="hd" for="leg">Длина ступни (см)</label>
                     <input type="number" id="leg" name="leg" required>
                 </div>
                 <div class="data">
-                    <label  id="hd"for="pulse">Средний пульс (уд/мин)</label>
+                    <label  class="hd" for="pulse">Средний пульс (уд/мин)</label>
                     <input type="number" id="pulse" name="pulse" required>
                 </div>
                 <div class="data">
-                    <label  id="hd"for="pulse">Среднее давление (мм рт.ст.)</label>
+                    <label  class="hd" for="pulse">Среднее давление (мм рт.ст.)</label>
                     <input type="number" id="upper" name="pulse"  placeholder="Верхнее" required>
                     <input type="number" id="lower" name="pulse" placeholder="Нижнее" required>
                 </div>
@@ -75,6 +76,7 @@
             <div class="result-container" id="result-container"></div>
             </form>
         </div>
+        <div id="space"></div>
         </div>
         </div>
     </main>
