--- a/holes/holes.html
+++ b/holes/holes.html
@@ -29,7 +29,7 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a href="../home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="../test/test.html">Test</a>
             <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
