--- a/test/test.html
+++ b/test/test.html
@@ -27,7 +27,7 @@
             <i id="cross" class='bx bx-x-circle'></i>
         </label>
         <nav class="navbar">
-            <a href="../home.html">Home</a>
+            <a href="../index.html">Home</a>
             <a href="#">Test</a>
             <a href="../gallery/gallery.html">Gallery</a>
             <p id="contacts">
