commit for github pages

--- a/exoplanets/exoplanets.html
+++ b/exoplanets/exoplanets.html
@@ -74,8 +74,8 @@
             <div class="description">
                 <h1>Gliese <span class="rotated">667Cc</span></h1>
                 <p id="tt3"><span class="fw">Gliese 667Cc</span> —  это экзопланета, находящаяся на
-                    расстоянии примерно 23,62 тысяч световых лет от Земли. Эта планета была открыта в
-                     2011 году и считается одной из наиболее похожих на Землю планет.</p>
+                    расстоянии 23,62 тысяч световых лет от Земли. Она была открыта в
+                     2011г. и считается крайне похожей на Землю планетой.</p>
             <p id="bt3"><span class="fw">Поверхность</span> планеты вероятно покрыта водными массами, что делает ее потенциально пригодной для жизни.
 
             <span class="closed">Изучение Gliese 667Cc позволяет ученым лучше понять возможность существования жизни на других планетах в нашей галактике.</span></p>
