--- a/fogs/fogs.html
+++ b/fogs/fogs.html
@@ -72,11 +72,11 @@
             <h1>Pillars of Creation</h1>
             <div class="description">
             <p id="tt1"><span class="fw">Столпы</span> творения -  это огромные газовые сгустки,
-                 появившиеся из столбов молекулярного водорода и 
+                 появившиеся из столбов водорода и 
                 пыли под воздействием звёздного ветра. <span class="closed"> Эти колонны газа - один из 
                 самых узнаваемых образов космоса.</span>
             </p>
-            <p id="bt1"> <span class="fw">Туманность</span> находится на расстоянии примерно 7 тысяч световых лет от Земли
+            <p id="bt1"> <span class="fw">Туманность</span> находится на расстоянии 7 тысяч световых лет от Земли
                 и является местом 
                 интенсивного звездообразования<span class="closed">, где газ и пыль сжимаются под воздействием
                  гравитации, образуя гигантские столбы, внутри которых зарождаются новые звезды.</span> </p>
