--- a/gallery/gallery.html
+++ b/gallery/gallery.html
@@ -67,7 +67,7 @@
                         <p id="answ"></p>
                     </div>
                     <div class="btncont">
-                    <button type="button" id="btn" class="btn">Отправить</button>
+                    <button type="button" id="btn" class="btn">Перевести</button>
                 </div>
                 </form>
             </div>
